<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bground"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearMom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="71dp"
        android:orientation="vertical"
        android:padding="16dp">


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:paddingBottom="35dp"
            android:paddingStart="20dp"
            android:textAlignment="textStart"
            android:textColor="#ffff"
            android:textColorHint="#ffff" />

        <EditText

            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingBottom="35dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:textColor="#ffff"
            android:textColorHint="#ffff" />


        <Button

            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/btn_shape"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="#16a7fb" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/txtBaby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="#f1f1f1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="createAccount"
                android:text="@string/need_a_new_account"
                android:textColor="#f1f1f1"
                tools:ignore="OnClick" />
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>